--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "migaman",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "env2": "^2.2.2",
     "express": "^4.16.3",
     "web3": "^1.0.0-beta.35"
   }
