--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/migaman/mytimemachine-playground.git"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "truffle compile"
   },
   "author": "migaman",
   "dependencies": {
@@ -17,5 +18,8 @@
     "env2": "^2.2.2",
     "express": "^4.16.3",
     "web3": "^1.0.0-beta.35"
+  },
+  "devDependencies": {
+    "truffle": "^4.1.14"
   }
 }
