Implement web3js example serverside

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ export PORT=3000
 export EXAMPLE_CONTRACT_ADDRESS=0xca4b024f3f7279534ccb5dc4a528c46afa79eed3
 export NODE_ENV=development
 export HEROKU_RELEASE_VERSION=0.1
+export WEB3_HTTP_PROVIDER_SERVERSIDE=http://127.0.0.1:7545
