--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^2.6.1",
     "env2": "^2.2.2",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
     "schema-object": "^4.0.11",
     "web3": "^0.20.7"
   },
