--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "ipfs-api": "^24.0.1",
     "log4js": "^3.0.5",
+    "multer": "^1.3.1",
     "schema-object": "^4.0.11",
     "web3": "^0.20.7"
   },
