--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "log4js": "^3.0.5",
     "multer": "^1.3.1",
     "schema-object": "^4.0.11",
-    "web3": "^0.20.7"
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
