--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "env2": "^2.2.2",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
